@@ -1,10 +1,18 @@
 Development version
 ===================
+- Added RequestHandler.abort(), a wrapper to abort().
+
+- Added get_valid_methods(), to return the HTTP methods a handler can handle.
+  This is used when raising MethodNotAllowed, which now correctly lists the
+  allowed methods as required by HTTP 1.1 spec.
+
 - Added Tipfy.get_url_adapter(), that returns a bound URL map, to make it
   easier to override the bound server_name or subdomain.
 
 - Exceptions caused when loading a badly configured middleware class are now
   caught and a warning is emitted.
+
+- Minor change: ALLOWED_METHODS are now listed in upper case.
 
 
 Version 0.6 - July 25, 2010
